# obet

./: .gitignore  CLAUDE.md  Makefile  compose.yaml  example.env  flake.nix  justfile
backend/: .dockerignore  Dockerfile  alembic.ini  example.env  pyproject.toml
backend/app/: api.py  settings.py
backend/app/dao/: market_dao.py  position_dao.py  user_dao.py  wallet_dao.py
backend/app/exceptions/: app_exception.py
backend/app/guards/: admin_guard.py  auth_guard.py
backend/app/routers/: admin_router.py  auth_router.py  markets_router.py  positions_router.py  wallet_router.py  webhooks_router.py
backend/app/schemas/: auth_schema.py  market_schema.py  position_schema.py  wallet_schema.py
backend/app/services/: auth_service.py  betting_service.py  market_service.py  opay_service.py  wallet_service.py
backend/database/: session.py
backend/database/alembic/: env.py
backend/database/alembic/versions/: 001_users.py  002_markets.py  003_positions.py  004_wallet_transactions.py
backend/database/models/: __init__.py  market.py  position.py  user.py  wallet_transaction.py
frontend/: .dockerignore  Dockerfile  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/markets/: page.tsx
frontend/app/markets/[id]/: page.tsx
frontend/components/: Globe.tsx  Navbar.tsx
frontend/features/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/features/markets/: BetModal.tsx  MarketCard.tsx
frontend/hooks/: useMarket.ts  useWallet.ts
frontend/lib/: api.ts  currency.ts
